gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail6781.d
version https://git-lfs.github.com/spec/v1
oid sha256:0a0c255a9ca196158a378e9cb41b9c8faa2cc2970a77f8e1f8ffc03c04b9bf85
size 379
